# cognizantmlops

./: pyproject.toml
.github/workflows/: azure-pipelines.yaml
machinelearning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mlopsv/: pyvenv.cfg
outputs/: fraud_detection_model.pkl
src/azuremlapp/: .env
src/azuremlapp/utils/: train.py
