[project]
name = "machinelearning"
version = "0.1.0"
description = "Supervised and unsupervised ML algorithm practice"
requires-python = ">=3.10"
dependencies = [
    # Core scientific stack
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",

    # ML framework
    "scikit-learn>=1.5",

    

   

    

  
    "joblib>=1.4",
    "python-dotenv>=1.0",
    
    
    
   
     "python-dotenv",
     
     "azure.identity",
     "azure-ai-ml>=1.24,<2"
     
    
]

[project.optional-dependencies]
nlp = ["nltk>=3.9", "gensim>=4.3"]
dev = [
    "pytest>=8.2",
    "black>=24.4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]